--- a/main_reduced_allcnn.ipynb
+++ b/main_reduced_allcnn.ipynb
@@ -4,35 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ALL_CNN Model"
+    "## Reduced_all_CNN Model"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "Could not find 'nvcuda.dll'. TensorFlow requires that this DLL be installed in a directory that is named in your %PATH% environment variable. Typically it is installed in 'C:\\Windows\\System32'. If it is not present, ensure that you have a CUDA-capable GPU with the correct driver installed.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mOSError\u001b[0m                                   Traceback (most recent call last)",
-      "\u001b[1;32m~\\Anaconda3\\envs\\AdvML\\lib\\site-packages\\tensorflow\\python\\platform\\self_check.py\u001b[0m in \u001b[0;36mpreload_check\u001b[1;34m()\u001b[0m\n\u001b[0;32m     61\u001b[0m         \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 62\u001b[1;33m           \u001b[0mctypes\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mWinDLL\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbuild_info\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnvcuda_dll_name\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     63\u001b[0m         \u001b[1;32mexcept\u001b[0m \u001b[0mOSError\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Anaconda3\\envs\\AdvML\\lib\\ctypes\\__init__.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, name, mode, handle, use_errno, use_last_error)\u001b[0m\n\u001b[0;32m    347\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mhandle\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 348\u001b[1;33m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_handle\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m_dlopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_name\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    349\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mOSError\u001b[0m: [WinError 126] The specified module could not be found",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-2f01009a3944>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mtensorflow\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mtf\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mpickle\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mrandom\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mrd\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Anaconda3\\envs\\AdvML\\lib\\site-packages\\tensorflow\\__init__.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     22\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     23\u001b[0m \u001b[1;31m# pylint: disable=wildcard-import\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 24\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mtensorflow\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpython\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[1;33m*\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     25\u001b[0m \u001b[1;31m# pylint: enable=wildcard-import\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     26\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Anaconda3\\envs\\AdvML\\lib\\site-packages\\tensorflow\\python\\__init__.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     47\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     48\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 49\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mtensorflow\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpython\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mpywrap_tensorflow\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     50\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     51\u001b[0m \u001b[1;31m# Protocol buffers\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Anaconda3\\envs\\AdvML\\lib\\site-packages\\tensorflow\\python\\pywrap_tensorflow.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     28\u001b[0m \u001b[1;31m# Perform pre-load sanity checks in order to produce a more actionable error\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     29\u001b[0m \u001b[1;31m# than we get from an error during SWIG import.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 30\u001b[1;33m \u001b[0mself_check\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpreload_check\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     31\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     32\u001b[0m \u001b[1;31m# pylint: disable=wildcard-import,g-import-not-at-top,unused-import,line-too-long\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Anaconda3\\envs\\AdvML\\lib\\site-packages\\tensorflow\\python\\platform\\self_check.py\u001b[0m in \u001b[0;36mpreload_check\u001b[1;34m()\u001b[0m\n\u001b[0;32m     68\u001b[0m               \u001b[1;34m\"'C:\\\\Windows\\\\System32'. If it is not present, ensure that you \"\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     69\u001b[0m               \u001b[1;34m\"have a CUDA-capable GPU with the correct driver installed.\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 70\u001b[1;33m               % build_info.nvcuda_dll_name)\n\u001b[0m\u001b[0;32m     71\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     72\u001b[0m       if hasattr(build_info, \"cudart_dll_name\") and hasattr(\n",
-      "\u001b[1;31mImportError\u001b[0m: Could not find 'nvcuda.dll'. TensorFlow requires that this DLL be installed in a directory that is named in your %PATH% environment variable. Typically it is installed in 'C:\\Windows\\System32'. If it is not present, ensure that you have a CUDA-capable GPU with the correct driver installed."
-     ]
-    }
-   ],
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "import tensorflow as tf\n",
     "import numpy as np\n",
@@ -57,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -65,7 +46,9 @@
    "source": [
     "x_train=np.array([])\n",
     "y_train=np.array([])\n",
-    "for i in range(1,6):\n",
+    "x_val=np.array([])\n",
+    "y_val=np.array([])\n",
+    "for i in range(1,5):\n",
     "    \n",
     "    batch = unpickle(\"/data/cifar-10-batches-py/data_batch_%d\"%(i))\n",
     "    if len(x_train)==0 & len(y_train)==0:\n",
@@ -73,12 +56,16 @@
     "        y_train = batch[b'labels']\n",
     "    else:\n",
     "        x_train = np.concatenate((x_train, batch[b'data'])) \n",
-    "        y_train = np.concatenate((y_train, batch[b'labels']))"
+    "        y_train = np.concatenate((y_train, batch[b'labels']))\n",
+    "\n",
+    "v_batch = unpickle(\"/data/cifar-10-batches-py/data_batch_5\")\n",
+    "x_val = v_batch[b'data']\n",
+    "y_val = v_batch[b'labels']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -87,12 +74,16 @@
     "y_train0 = np.empty((0,10), int)\n",
     "for y in y_train:\n",
     "    indi= [1 if i==y else 0 for i in range(0,10)]\n",
-    "    y_train0 = np.append(y_train0, np.array([indi]), axis=0)"
+    "    y_train0 = np.append(y_train0, np.array([indi]), axis=0)\n",
+    "y_val0 = np.empty((0,10), int)\n",
+    "for y in y_val:\n",
+    "    indi= [1 if i==y else 0 for i in range(0,10)]\n",
+    "    y_val0 = np.append(y_val0, np.array([indi]), axis=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -105,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -126,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -159,7 +150,7 @@
     "    #cnn_3\n",
     "    W_conv3 = tf.get_variable('W_conv3', shape=[2, 2, n1, n1])\n",
     "    b_conv3 = tf.get_variable('b_conv3', shape=[n1])\n",
-    "    h_conv3 = tf.nn.leaky_relu(tf.add(tf.nn.conv2d(h_conv2, W_conv3, strides=[1, 2, 2, 1], padding='SAME'), b_conv3)\n",
+    "    h_conv3 = tf.nn.leaky_relu(tf.add(tf.nn.conv2d(h_conv2, W_conv3, strides=[1, 2, 2, 1], padding='SAME'), b_conv3))\n",
     "    \n",
     "\n",
     "    \n",
@@ -191,7 +182,7 @@
     "    b_conv7 = tf.get_variable('b_conv7', shape=[n3])\n",
     "    h_conv7 = tf.nn.leaky_relu(tf.add(tf.nn.conv2d(h_conv6, W_conv7, strides=[1, 1, 1, 1], padding='SAME'), b_conv7))\n",
     "    #dropout_3\n",
-    "    d_3=tf.nn.dropout(h_conv6,0.8)\n",
+    "    d_3=tf.nn.dropout(h_conv7,0.8)\n",
     "    #cnn_8\n",
     "    W_conv8 = tf.get_variable('W_conv8', shape=[2, 2, n3, n3])\n",
     "    b_conv8 = tf.get_variable('b_conv8', shape=[n3])\n",
@@ -227,8 +218,8 @@
     "\n",
     "\n",
     "    # fc layer to logits 10\n",
-    "    h_flat = tf.reshape(h_conv12, [-1, 8*8*n6])\n",
-    "    W_fc1 = tf.get_variable('W_fc1', shape=[8*8*n6, 10])\n",
+    "    h_flat = tf.reshape(h_conv12, [-1, 2*2*n4])\n",
+    "    W_fc1 = tf.get_variable('W_fc1', shape=[2*2*n4, 10])\n",
     "    b_fc1 = tf.get_variable('b_fc1', shape=[10])\n",
     "    #layer of output\n",
     "    logits = tf.add(tf.matmul(h_flat, W_fc1), b_fc1, name='logits')\n",
@@ -259,15 +250,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\r",
-      "After step   0, test accuracy 0.0870\n"
+      "After step   0, test accuracy 0.0950\n",
+      "After step 500, test accuracy 0.4480\n",
+      "After step 1000, test accuracy 0.4590\n",
+      "After step 1500, test accuracy 0.4550\n",
+      "After step 2000, test accuracy 0.4490\n",
+      "After step 3000, test accuracy 0.4630\n",
+      "After step 3500, test accuracy 0.4260\n",
+      "After step 4500, test accuracy 0.4590\n",
+      "After step 5000, test accuracy 0.4640\n",
+      "After step 5500, test accuracy 0.4740\n",
+      "After step 6000, test accuracy 0.4470\n",
+      "After step 6500, test accuracy 0.4590\n",
+      "After step 7000, test accuracy 0.4970\n",
+      "After step 7500, test accuracy 0.4470\n",
+      "After step 8000, test accuracy 0.4340\n",
+      "After step 8500, test accuracy 0.4550\n",
+      "After step 9000, test accuracy 0.4510\n",
+      "After step 9500, test accuracy 0.4960\n",
+      "After step 10000, test accuracy 0.4540\n"
      ]
     }
    ],
@@ -307,10 +315,10 @@
     "        summary_writer = tf.summary.FileWriter(dir_name, sess.graph)\n",
     "        summary_writer_train = tf.summary.FileWriter(dir_name+'/train', sess.graph)\n",
     "        summary_writer_test = tf.summary.FileWriter(dir_name+'/test')\n",
-    "        \n",
+    "        summary_writer_val = tf.summary.FileWriter(dir_name+'/val')\n",
     "        sess.run(tf.global_variables_initializer())\n",
     "        batch=0\n",
-    "        for i in range(20001):\n",
+    "        for i in range(10001):\n",
     "            \n",
     "             \n",
     "            _ , summary = sess.run((train_step, summary_op),\n",
@@ -321,10 +329,17 @@
     "            if i%10==0:\n",
     "                t=rd.sample(range(0,10000),1000)\n",
     "                summary_writer_train.add_summary(summary, i)\n",
-    "                (test_error, summary) = sess.run((accuracy,summary_op), {x:x_test[t], y:y_test0[t]})\n",
+    "                (val_error, summary_t) = sess.run((accuracy,summary_op), {x:x_val[t], y:y_val0[t]})\n",
+    "                summary_writer_val.add_summary(summary_t, i)\n",
     "                if i%1000 == 0:\n",
-    "                    print(\"\\rAfter step {0:3d}, test accuracy {1:0.4f}\".format(i, test_error), flush=True)\n",
+    "                    print(\"\\rAfter step {0:3d}, valiation accuracy {1:0.4f}\".format(i, val_error), flush=True)\n",
+    "        #calculate test error\n",
+    "        test_error=0\n",
+    "        for i in range(0,10):\n",
+    "            test_error = test_error+sess.run(accuracy,{x:x_test[1000*i:1000*(i+1)],y:y_test0[1000*1:1000*(i+1)]})\n",
+    "        print(\"\\rFinal test accuracy is{1:0.4f}\".format(test_error))\n",
     "\n",
+    "    \n",
     "    "
    ]
   },
