--- a/models/model_cnnfmp.ipynb
+++ b/models/model_cnnfmp.ipynb
@@ -64,7 +64,7 @@
     "y_val=np.array([])\n",
     "for i in range(1,5):\n",
     "    \n",
-    "    batch = unpickle(\"/data/cifar-10-batches-py/data_batch_%d\"%(i))\n",
+    "    batch = unpickle(\"data/cifar-10-batches-py/data_batch_%d\"%(i))\n",
     "    if len(x_train)==0 & len(y_train)==0:\n",
     "        x_train = batch[b'data']\n",
     "        y_train = batch[b'labels']\n",
@@ -72,7 +72,7 @@
     "        x_train = np.concatenate((x_train, batch[b'data'])) \n",
     "        y_train = np.concatenate((y_train, batch[b'labels']))\n",
     "\n",
-    "v_batch = unpickle(\"/data/cifar-10-batches-py/data_batch_5\")\n",
+    "v_batch = unpickle(\"data/cifar-10-batches-py/data_batch_5\")\n",
     "x_val = v_batch[b'data']\n",
     "y_val = v_batch[b'labels']"
    ]
@@ -99,7 +99,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_batch = unpickle(\"/data/cifar-10-batches-py/test_batch\")\n",
+    "test_batch = unpickle(\"data/cifar-10-batches-py/test_batch\")\n",
     "x_test = test_batch[b'data']\n",
     "y_test = test_batch[b'labels']"
    ]
@@ -311,35 +311,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "After step   0, valiation accuracy 0.0950\n",
-      "After step 1000, valiation accuracy 0.3360\n",
-      "After step 2000, valiation accuracy 0.4430\n",
-      "After step 3000, valiation accuracy 0.5390\n",
-      "After step 4000, valiation accuracy 0.5530\n",
-      "After step 5000, valiation accuracy 0.5620\n",
-      "After step 6000, valiation accuracy 0.5860\n",
-      "After step 7000, valiation accuracy 0.5830\n",
-      "After step 8000, valiation accuracy 0.5900\n",
-      "After step 9000, valiation accuracy 0.6200\n",
-      "After step 10000, valiation accuracy 0.6190\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "tuple index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-8-0312ab2cbea1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     56\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     57\u001b[0m             \u001b[0mtest_error\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtest_error\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0msess\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maccuracy\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mx_test\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1000\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m1000\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0my_test0\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1000\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m1000\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 58\u001b[0;31m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"\\rFinal test accuracy is{1:0.4f}\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest_error\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     59\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     60\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mIndexError\u001b[0m: tuple index out of range"
+      "After step   0, valiation accuracy 0.0970\n",
+      "After step 1000, valiation accuracy 0.2870\n",
+      "After step 2000, valiation accuracy 0.4730\n",
+      "After step 3000, valiation accuracy 0.5700\n",
+      "After step 4000, valiation accuracy 0.5340\n",
+      "After step 5000, valiation accuracy 0.5800\n",
+      "After step 6000, valiation accuracy 0.5770\n",
+      "After step 7000, valiation accuracy 0.5400\n",
+      "After step 8000, valiation accuracy 0.5680\n",
+      "After step 9000, valiation accuracy 0.5730\n",
+      "After step 10000, valiation accuracy 0.6020\n",
+      "Final test accuracy is 0.5964\n"
      ]
     }
    ],
@@ -400,10 +390,10 @@
     "        #calculate test error\n",
     "        test_ac=[]\n",
     "        for i in range(0,10):\n",
-    "            acu = sess.run(accuracy,{x:x_test[1000*i:1000*(i+1)],y:y_test0[1000*i:1000*(i+1)]}）\n",
+    "            acu = sess.run(accuracy,{x:x_test[1000*i:1000*(i+1)],y:y_test0[1000*i:1000*(i+1)]})\n",
     "            test_ac.append(acu)\n",
     "        all_ac = sum(test_ac)*0.1\n",
-    "        print(\"\\rFinal test accuracy is %.4f\"all_ac)\n",
+    "        print(\"\\rFinal test accuracy is %.4f\"%all_ac)\n",
     "\n",
     "    "
    ]
@@ -420,27 +410,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'test_ac' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-11-5e4223077c9a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtest_ac\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'test_ac' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "test_ac\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -452,6 +421,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
